[gd_scene load_steps=38 format=2]

[ext_resource path="res://assets/Fonts_v2/PT_Sans/PTSans-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/Themes_v2/EmptyTexture.tres" type="StyleBox" id=2]
[ext_resource path="res://assets/Themes_v2/UNIVERSAL/Panel_Square.tres" type="StyleBox" id=3]
[ext_resource path="res://gui_modules/Universal/Scripts/NavigationModule.gd" type="Script" id=4]
[ext_resource path="res://assets/Textures_v2/Universal/Icons/divider_navi_player.png" type="Texture" id=5]
[ext_resource path="res://assets/Textures_v2/ANIMATIONS/ClassAchieved/panel_class.png" type="Texture" id=6]
[ext_resource path="res://assets/Textures_v2/JOB_MODULE new 2021/panel_job_big.png" type="Texture" id=7]
[ext_resource path="res://assets/Themes_v2/UNIVERSAL/VScrollBar.tres" type="Theme" id=8]
[ext_resource path="res://assets/Fonts_v2/FontThemes/MainMiddle.tres" type="DynamicFont" id=9]
[ext_resource path="res://assets/images/gui/inventory/icon_armor1.png" type="Texture" id=10]
[ext_resource path="res://assets/Textures_v2/JOB_MODULE new 2021/button_job_chars_pressed.png" type="Texture" id=11]
[ext_resource path="res://assets/Textures_v2/JOB_MODULE new 2021/button_job_chars_hover.png" type="Texture" id=12]
[ext_resource path="res://gui_modules/Mansion/Scripts/MansionJobModule.gd" type="Script" id=13]
[ext_resource path="res://assets/Textures_v2/JOB_MODULE new 2021/button_job_chars.png" type="Texture" id=14]
[ext_resource path="res://assets/Fonts_v2/PT_Sans/PT_30.tres" type="DynamicFont" id=15]
[ext_resource path="res://assets/images/iconsitems/Wood.png" type="Texture" id=16]
[ext_resource path="res://assets/images/backgrounds/crypt4.png" type="Texture" id=17]
[ext_resource path="res://assets/Textures_v2/Job_module new 2021/button_job_sqr_hover.png" type="Texture" id=18]
[ext_resource path="res://assets/Textures_v2/Job_module new 2021/button_job_sqr_pressed.png" type="Texture" id=19]
[ext_resource path="res://assets/Themes_v2/MANSION/M_Job_BG.tres" type="StyleBox" id=20]
[ext_resource path="res://assets/Textures_v2/Job_module new 2021/button_job_sqr.png" type="Texture" id=21]
[ext_resource path="res://assets/Textures_v2/JOB_MODULE new 2021/panel_job_image.png" type="Texture" id=22]
[ext_resource path="res://assets/Themes_v2/UNIVERSAL/DecorButton.tres" type="Theme" id=23]
[ext_resource path="res://assets/Fonts_v2/Noto_Sans_SC/NotoSansSC-Regular.otf" type="DynamicFontData" id=24]
[ext_resource path="res://assets/Textures_v2/JOB_MODULE new 2021/icon_job_worktool.png" type="Texture" id=25]
[ext_resource path="res://assets/Textures_v2/JOB_MODULE new 2021/icon_job_workspeed.png" type="Texture" id=26]
[ext_resource path="res://assets/Textures_v2/Universal/Buttons/button_occupation_hover.png" type="Texture" id=27]
[ext_resource path="res://assets/Textures_v2/Universal/Buttons/button_occupation_pressed.png" type="Texture" id=28]
[ext_resource path="res://assets/Textures_v2/Universal/Buttons/button_occupation_disabled.png" type="Texture" id=29]
[ext_resource path="res://assets/Textures_v2/Universal/Buttons/button_occupation.png" type="Texture" id=30]

[sub_resource type="StyleBoxTexture" id=1]

[sub_resource type="DynamicFontData" id=2]
font_path = "res://assets/Fonts_v2/Noto_Sans_SC/NotoSansSC-Regular.otf"

[sub_resource type="DynamicFont" id=3]
size = 20
use_filter = true
font_data = SubResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://assets/Fonts_v2/Ledger/Ledger-Regular.ttf"

[sub_resource type="DynamicFont" id=6]
size = 42
use_filter = true
font_data = SubResource( 5 )

[sub_resource type="DynamicFont" id=7]
size = 24
use_filter = true
font_data = ExtResource( 24 )

[node name="MansionJobModule" type="Panel"]
margin_right = 1920.0
margin_bottom = 1080.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Frame" type="TextureRect" parent="."]
margin_left = 30.0
margin_top = 30.0
margin_right = 70.0
margin_bottom = 70.0
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JobBG" type="Panel" parent="."]
show_behind_parent = true
margin_right = 1920.0
margin_bottom = 1080.0
custom_styles/panel = ExtResource( 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resourses" type="ScrollContainer" parent="."]
light_mask = 0
margin_left = 880.0
margin_top = 268.0
margin_right = 1327.0
margin_bottom = 799.0
theme = ExtResource( 8 )
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="Resourses"]
light_mask = 0
margin_right = 447.0
margin_bottom = 100.0
size_flags_horizontal = 3
custom_constants/vseparation = 20
custom_constants/hseparation = 20
columns = 3

[node name="Button" type="TextureButton" parent="Resourses/GridContainer"]
light_mask = 0
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 50, 50 )
toggle_mode = true
texture_normal = ExtResource( 21 )
texture_pressed = ExtResource( 19 )
texture_hover = ExtResource( 18 )

[node name="TextureRect" type="TextureRect" parent="Resourses/GridContainer/Button"]
margin_left = 5.0
margin_top = 5.0
margin_right = 95.0
margin_bottom = 95.0
rect_min_size = Vector2( 5, 0 )
texture = ExtResource( 16 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Resourses/GridContainer/Button"]
margin_left = 10.0
margin_top = 64.0
margin_right = 90.0
margin_bottom = 94.0
custom_fonts/font = SubResource( 3 )
text = "10/5"
align = 2
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NavigationModule" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 68.0
margin_top = 168.0
margin_right = -602.0
margin_bottom = -857.0
custom_styles/panel = ExtResource( 3 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Panel" parent="NavigationModule"]
visible = false
self_modulate = Color( 0, 0, 0, 0.705882 )
show_behind_parent = true
margin_right = 1450.0
margin_bottom = 55.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background2" type="TextureRect" parent="NavigationModule"]
visible = false
self_modulate = Color( 0, 0, 0, 0.705882 )
show_behind_parent = true
margin_right = 1250.0
margin_bottom = 55.0
texture = ExtResource( 6 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator" type="TextureRect" parent="NavigationModule"]
visible = false
margin_left = 13.0
margin_top = -1.0
margin_right = 53.0
margin_bottom = 54.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NavigationContainer" type="ScrollContainer" parent="NavigationModule"]
margin_left = 15.0
margin_top = -1.0
margin_right = 1247.0
margin_bottom = 59.0
scroll_vertical_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AreaSelection" type="HBoxContainer" parent="NavigationModule/NavigationContainer"]
custom_constants/separation = 14

[node name="Button" type="Button" parent="NavigationModule/NavigationContainer/AreaSelection"]
visible = false
margin_right = 128.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 55 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.6, 0.513726, 0.435294, 1 )
custom_colors/font_color_hover = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_pressed = Color( 0.976471, 0.882353, 0.505882, 1 )
toggle_mode = true
text = "Mansion"

[node name="Landscape" type="TextureRect" parent="."]
margin_left = 68.0
margin_top = 270.0
margin_right = 868.0
margin_bottom = 720.0
texture = ExtResource( 17 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LandscapeFrame" type="TextureRect" parent="."]
margin_left = 68.0
margin_top = 270.0
margin_right = 868.0
margin_bottom = 720.0
texture = ExtResource( 22 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterList" type="ScrollContainer" parent="."]
light_mask = 0
margin_left = 1392.0
margin_top = 169.0
margin_right = 1832.0
margin_bottom = 889.0
theme = ExtResource( 8 )
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="VBoxContainer" parent="CharacterList"]
light_mask = 0
margin_right = 440.0
size_flags_horizontal = 3

[node name="Button" type="TextureButton" parent="CharacterList/GridContainer"]
visible = false
light_mask = 0
margin_right = 440.0
margin_bottom = 52.0
rect_min_size = Vector2( 50, 50 )
toggle_mode = true
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 12 )

[node name="Name" type="Label" parent="CharacterList/GridContainer/Button"]
light_mask = 0
margin_left = 54.0
margin_top = 8.0
margin_right = 238.0
margin_bottom = 44.0
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Name"
align = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="CharacterList/GridContainer/Button"]
light_mask = 0
margin_left = 7.0
margin_top = 5.0
margin_right = 47.0
margin_bottom = 45.0
mouse_filter = 2
texture = ExtResource( 10 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="CharacterList/GridContainer/Button"]
margin_left = 250.0
margin_top = 8.0
margin_right = 432.0
margin_bottom = 43.0
texture_normal = ExtResource( 30 )
texture_pressed = ExtResource( 28 )
texture_hover = ExtResource( 27 )
texture_disabled = ExtResource( 29 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CharacterList/GridContainer/Button/TextureButton"]
margin_right = 182.0
margin_bottom = 35.0
custom_fonts/font = ExtResource( 9 )
text = "Rest"
align = 1
clip_text = true

[node name="OccupationLabel" type="Label" parent="."]
margin_left = 564.0
margin_top = 45.0
margin_right = 802.0
margin_bottom = 107.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
text = "Occupation"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterListLabel" type="Label" parent="."]
margin_left = 1480.0
margin_top = 45.0
margin_right = 1763.0
margin_bottom = 107.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
text = "Character list"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DescriptionLabel" type="Label" parent="."]
margin_left = 68.0
margin_top = 821.0
margin_right = 1317.0
margin_bottom = 922.0
custom_fonts/font = ExtResource( 15 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
text = "Description perscription"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DescriptionLabel2" type="Label" parent="."]
margin_left = 66.8648
margin_top = 917.189
margin_right = 150.865
margin_bottom = 968.189
custom_fonts/font = ExtResource( 15 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
text = "Sickle"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DescriptionLabel3" type="Label" parent="."]
margin_left = 165.569
margin_top = 918.378
margin_right = 241.569
margin_bottom = 969.378
custom_fonts/font = ExtResource( 15 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
text = "20.67"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" type="Button" parent="."]
margin_left = 1522.0
margin_top = 963.0
margin_right = 1719.0
margin_bottom = 1022.0
theme = ExtResource( 23 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
text = "Close"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Worktool" type="TextureRect" parent="."]
margin_left = 68.0
margin_top = 960.0
margin_right = 132.0
margin_bottom = 1024.0
texture = ExtResource( 25 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Workspeed" type="TextureRect" parent="."]
margin_left = 152.0
margin_top = 960.0
margin_right = 216.0
margin_bottom = 1024.0
texture = ExtResource( 26 )
__meta__ = {
"_edit_use_anchors_": false
}
